--- a/search_engine-master/requirements.txt
+++ b/search_engine-master/requirements.txt
@@ -34,12 +34,9 @@ urllib3==1.26.15
 wsproto==1.2.0
 scikit-learn==1.2.2
 gunicorn==20.1.0
+elasticsearch==8.7.0
+python-dateutil==2.5.3
 whitenoise
-elasticsearch
-dateutil
-requests
-bs4
-urllib
-concurrent
+
 
 
